--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
             </div>
         </section>
 
+        <!-- something somthing -->
+
         <!-- footer section start -->
         <footer>
             <span>Designed By <a href="mailto:usmankashmiri378@gmail.com ">Usman Kashmiri</a> | &#169 2021 All rights reserved.</span>
