Fixed carousel issue

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div class="card ">
                         <a href="https://usman-kashmiri.github.io/Blueberry-Accessories/index.html ">
                             <div class="box ">
-                                <img src="assets/imgs/carousel/img01.jpg " alt=" ">
+                                <img src="assets/imgs/carousel/img 01.jpg " alt=" ">
                                 <div class="text ">Blueberry Accessories - Home</div>
                             </div>
                         </a>
@@ -223,7 +223,7 @@
                     <div class="card ">
                         <a href="https://usman-kashmiri.github.io/Blueberry-Accessories/index.html ">
                             <div class="box ">
-                                <img src="assets/imgs/carousel/img02.jpg " alt=" ">
+                                <img src="assets/imgs/carousel/img 02.jpg " alt=" ">
                                 <div class="text ">Blueberry Accessoriesr - Products</div>
                             </div>
                         </a>
@@ -231,7 +231,7 @@
                     <div class="card ">
                         <a href="https://usman-kashmiri.github.io/Blueberry-Accessories/product.html ">
                             <div class="box ">
-                                <img src="assets/imgs/carousel/img03.jpg " alt=" ">
+                                <img src="assets/imgs/carousel/img 03.jpg " alt=" ">
                                 <div class="text ">Blueberry Accessories - Product Details</div>
                             </div>
                         </a>
@@ -384,8 +384,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- something somthing -->
 
         <!-- footer section start -->
         <footer>
